# pico-sht4x

./: CMakeLists.txt  sensirion_i2c_hal.c
